--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start:dev": "nodemon server/index.js",
     "build:dev": "webpack --watch",
     "start": "webpack && node server/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -24,10 +24,12 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "babel-loader": "^8.2.2",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "webpack": "^5.19.0",
     "webpack-cli": "^4.4.0"
   },
@@ -38,6 +40,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.7"
   }
 }
